--- a/src/cyclic_idx/lib.rs.html
+++ b/src/cyclic_idx/lib.rs.html
@@ -479,7 +479,7 @@
 //! ```
 //! # use std::ops::Index;
 //! #[derive(Clone, Debug)]
-//! struct Container&lt;T: Index&lt;usize&gt; + IntoIterator + Clone&gt;(T);
+//! struct Container&lt;N, T: Index&lt;usize, Output = N&gt; + IntoIterator&lt;Item = N&gt; + Clone&gt;(T);
 //! ```
 //!
 //! For `Container` itself to meet our trait bounds, we need to implement the `Index` and `IntoIterator` traits:
@@ -488,8 +488,8 @@
 //! # use cyclic_idx::Cyclic;
 //! # use std::ops::Index;
 //! # #[derive(Clone, Debug)]
-//! # struct Container&lt;T: Index&lt;usize&gt; + IntoIterator + Clone&gt;(T);
-//! impl&lt;T, N&gt; IntoIterator for Container&lt;T&gt;
+//! # struct Container&lt;N, T: Index&lt;usize, Output = N&gt; + IntoIterator&lt;Item = N&gt; + Clone&gt;(T);
+//! impl&lt;T, N&gt; IntoIterator for Container&lt;N, T&gt;
 //! where
 //!     T: Index&lt;usize, Output = N&gt; + IntoIterator&lt;Item = N&gt; + Clone,
 //! {
@@ -501,7 +501,7 @@
 //!     }
 //! }
 //!
-//! impl&lt;T, N&gt; Index&lt;usize&gt; for Container&lt;T&gt;
+//! impl&lt;T, N&gt; Index&lt;usize&gt; for Container&lt;N, T&gt;
 //! where
 //!     T: Index&lt;usize, Output = N&gt; + IntoIterator&lt;Item = N&gt; + Clone,
 //! {
@@ -512,7 +512,7 @@
 //!     }
 //! }
 //!
-//! let ex: Cyclic&lt;Container&lt;Vec&lt;u8&gt;&gt;, usize, usize&gt; = Cyclic::new(Container(vec![1, 2, 3]));
+//! let ex: Cyclic&lt;Container&lt;u8, Vec&lt;u8&gt;&gt;, usize, usize&gt; = Cyclic::new(Container(vec![1, 2, 3]));
 //! assert_eq!(1, ex[0]);
 //! assert_eq!(1, ex[3]);
 //! ```
